; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-io/src/extr_file.c_mrb_file_realpath.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-io/src/extr_file.c_mrb_file_realpath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"S|S\00", align 1
@FILE_SEPARATOR = common dso_local global i32 0, align 4
@PATH_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @mrb_file_realpath to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_file_realpath(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @mrb_get_args(i32* %12, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32* %6, i32* %7)
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = icmp eq i32 %14, 2
  br i1 %15, label %16, label %31

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @mrb_str_dup(i32* %17, i32 %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* %8, align 4
  %22 = load i32*, i32** %4, align 8
  %23 = load i32, i32* @FILE_SEPARATOR, align 4
  %24 = call i32 @mrb_str_new_cstr(i32* %22, i32 %23)
  %25 = call i32 @mrb_str_append(i32* %20, i32 %21, i32 %24)
  store i32 %25, i32* %8, align 4
  %26 = load i32*, i32** %4, align 8
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @mrb_str_append(i32* %26, i32 %27, i32 %28)
  store i32 %29, i32* %8, align 4
  %30 = load i32, i32* %8, align 4
  store i32 %30, i32* %6, align 4
  br label %31

31:                                               ; preds = %16, %2
  %32 = load i32*, i32** %4, align 8
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @RSTRING_CSTR(i32* %32, i32 %33)
  %35 = call i8* @mrb_locale_from_utf8(i32 %34, i32 -1)
  store i8* %35, i8** %11, align 8
  %36 = load i32*, i32** %4, align 8
  %37 = load i32, i32* @PATH_MAX, align 4
  %38 = call i32 @mrb_str_buf_new(i32* %36, i32 %37)
  store i32 %38, i32* %9, align 4
  %39 = load i8*, i8** %11, align 8
  %40 = load i32, i32* %9, align 4
  %41 = call i32 @RSTRING_PTR(i32 %40)
  %42 = call i32* @realpath(i8* %39, i32 %41)
  %43 = icmp eq i32* %42, null
  br i1 %43, label %44, label %51

44:                                               ; preds = %31
  %45 = load i8*, i8** %11, align 8
  %46 = call i32 @mrb_locale_free(i8* %45)
  %47 = load i32*, i32** %4, align 8
  %48 = load i8*, i8** %11, align 8
  %49 = call i32 @mrb_sys_fail(i32* %47, i8* %48)
  %50 = load i32, i32* %9, align 4
  store i32 %50, i32* %3, align 4
  br label %61

51:                                               ; preds = %31
  %52 = load i8*, i8** %11, align 8
  %53 = call i32 @mrb_locale_free(i8* %52)
  %54 = load i32*, i32** %4, align 8
  %55 = load i32, i32* %9, align 4
  %56 = load i32, i32* %9, align 4
  %57 = call i32 @RSTRING_PTR(i32 %56)
  %58 = call i32 @strlen(i32 %57)
  %59 = call i32 @mrb_str_resize(i32* %54, i32 %55, i32 %58)
  %60 = load i32, i32* %9, align 4
  store i32 %60, i32* %3, align 4
  br label %61

61:                                               ; preds = %51, %44
  %62 = load i32, i32* %3, align 4
  ret i32 %62
}

declare dso_local i32 @mrb_get_args(i32*, i8*, i32*, i32*) #1

declare dso_local i32 @mrb_str_dup(i32*, i32) #1

declare dso_local i32 @mrb_str_append(i32*, i32, i32) #1

declare dso_local i32 @mrb_str_new_cstr(i32*, i32) #1

declare dso_local i8* @mrb_locale_from_utf8(i32, i32) #1

declare dso_local i32 @RSTRING_CSTR(i32*, i32) #1

declare dso_local i32 @mrb_str_buf_new(i32*, i32) #1

declare dso_local i32* @realpath(i8*, i32) #1

declare dso_local i32 @RSTRING_PTR(i32) #1

declare dso_local i32 @mrb_locale_free(i8*) #1

declare dso_local i32 @mrb_sys_fail(i32*, i8*) #1

declare dso_local i32 @mrb_str_resize(i32*, i32, i32) #1

declare dso_local i32 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
